# docs/swagger.yaml
@@ -2201,14 +2201,14 @@ paths:
             additionalProperties:
               type: string
             type: object
-        "402":
-          description: Daily quota exceeded
+        "404":
+          description: Not Found
           schema:
             additionalProperties:
               type: string
             type: object
-        "404":
-          description: Not Found
+        "429":
+          description: Daily quota exceeded
           schema:
             additionalProperties:
               type: string
